--- a/ValueGUI/ValueGUI.csproj
+++ b/ValueGUI/ValueGUI.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Properties\DataSources\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
